--- a/about/index.html
+++ b/about/index.html
@@ -268,6 +268,7 @@ and damage functions of the monster class
 - Resize character graphics for game application
 
 (Week 14)
+
 - The class divided separately because it would be difficult 
 to implement because only the stats was changed in the Monster class.
 - Implement the monster's bullet class and make it a hit
@@ -294,6 +295,13 @@ including Path settings and install the GCC compiler
 - Connect theme, blog to Repository using git submodule
 - Configure the blog menu and create the about.md, config.toml
 - Update Git repository to manage blogs and project folders
+
+(Week 14)
+
+- Add blog project menu
+- Update README.md / blog about.md
+- Create a game description page
+
 </code></pre>
 <h4 id="khb7httpsgithubcomkhb7">
   <a href="https://github.com/khb7">khb7</a>
@@ -313,6 +321,15 @@ including Path settings and install the GCC compiler
 - Implementing background graphic updates using directional key events
 - Create object classes to manage multiple elements
 - Create game settings and update game character features
+
+(Week 14)
+
+- Resize the game screen and create a new background
+- Create class related to in-game sound generation
+- Apply a class which make the background move when a direction key event occurs
+- Makes the elements move with the background
+- Makes the background can go on indefinitely
+
 </code></pre>
 <h4 id="plmokn5whttpsgithubcomplmokn5w">
   <a href="https://github.com/plmokn5w">plmokn5w</a>
@@ -329,7 +346,17 @@ including Path settings and install the GCC compiler
 
 - Suggest modifying the opengame_2.py file
 - Implement Object, Player, Monster, EXP class
-- Modularize library.py</code></pre>
+- Modularize library.py
+
+(Week 14)
+
+- Implementing a Weapon class about a player's bullet
+- Fire a bullet at the monster closest to the player
+- Implement Bullet classes created from Weapon
+- gave a delay so that the bullet could be fired at an appropriate interval
+- fix the player in the middle of the screen by drawing objects based on the player
+
+</code></pre>
 
     </div>
     
